Add database migration for project module changes

--- a/phinx.yml
+++ b/phinx.yml
@@ -7,25 +7,16 @@ environments:
     production:
         adapter: pgsql
         host: 127.0.0.1
-        name: uzerp-live
+        name: uzerp
         user: www-data
         pass: ''
         port: 5432
         charset: utf8
 
     testing:
-        adapter: mysql
+        adapter: pgsql
         host: 127.0.0.1
-        name: uzerp-testing
-        user: root
-        pass: ''
-        port: 5432
-        charset: utf8
-
-    diag:
-        adapter: mysql
-        host: 127.0.0.1
-        name: uzerp-diag
+        name: uzerp-test
         user: root
         pass: ''
         port: 5432
