Use raven-php dev-master that includes verify_ssl option

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "require": {
         "robmorgan/phinx": "*",
-        "raven/raven": "0.10.0",
+		"raven/raven": "0.8.*@dev",
         "smarty/smarty": "3.1.21"
     }
 }
