--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,7 @@ data/resource_cache/**
 data/templates_c/**
 data/tmp/**
 data/users/**
+data/print_debug/**
 
 # User/site modules and template overrides
 user/**
