Move phinx migrations location and add a UzerpMigration class. Add migrations for Purchase Order to Sales Order link.

--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,10 @@
     "autoload": {
         "files" : [
             "vendor/adodb/adodb-php/adodb-xmlschema03.inc.php"
-        ]
+        ],
+        "psr-4": {
+            "UzerpPhinx\\": "schema/phinx/classes/"
+        }
     }
 }
 
