Change adodb-php install source to github from bitbucket Reference #91

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "repositories": [
         {
             "type": "vcs",
-            "url": "https://uzerp@bitbucket.org/uzerp/adodb.git"
+            "url": "https://github.com/uzerpllp/adodb.git"
         }
     ],
 
