Add composer requirement Symfony\Component\HttpFoundation\Request

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "smarty/smarty": "3.1.21",
         "adodb/adodb-php": "@dev",
         "leafo/lessphp": "0.5.0",
-        "riimu/kit-csrf": "2.*"
+        "riimu/kit-csrf": "2.*",
+        "symfony/http-foundation": "^3.1"
     },
 
     "autoload": {
@@ -24,4 +25,3 @@
         }
     }
 }
-
