'View Line Notes' sidebar action and Model sort override. Adds setCustomModelOrder method to override model sort order loaded from conf/custom-model-order.yaml. closes #127

--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@ user/**
 
 # Exclude local changes to the config file
 conf/config.php
+conf/custom-model-order.yaml
 
 # Exclude composer installed stuff
 composer.lock
