Product selector fixes

--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,7 @@ user/**
 # Exclude local changes to the config file
 conf/config.php
 conf/custom-model-order.yaml
+conf/selector-config.yml
 
 # Exclude composer installed stuff
 composer.lock
