Refactor password reset to require a minimum of 10 characters
Use RandomLib (https://github.com/ircmaxell/RandomLib) to
generate random password strings.

Add the password strength meter and password count to the
password entry field. Extends the height of the user selector.

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "leafo/lessphp": "0.5.0",
         "riimu/kit-csrf": "2.*",
         "symfony/http-foundation": "^3.1",
-        "symfony/yaml": "^3.1"
+        "symfony/yaml": "^3.1",
+        "ircmaxell/random-lib": "^1.2"
     },
 
     "autoload": {
