--- a/composer.json
+++ b/composer.json
@@ -8,14 +8,14 @@
 
     "require": {
         "robmorgan/phinx": "*",
-        "raven/raven": "0.8.*@dev",
         "smarty/smarty": "3.1.21",
         "adodb/adodb-php": "@dev",
         "leafo/lessphp": "0.5.0",
         "riimu/kit-csrf": "2.*",
         "symfony/http-foundation": "^3.1",
         "symfony/yaml": "^3.1",
-        "ircmaxell/random-lib": "^1.2"
+        "ircmaxell/random-lib": "^1.2",
+        "sentry/sentry": "^1.6"
     },
 
     "autoload": {
