Refactor custom model config into single file. Configure ClickInfo and custom order from a single yaml file and add convenience functions.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,7 @@ user/**
 # Exclude local changes to the config file
 conf/config.php
 conf/custom-model-order.yml
+conf/model-config.yml
 conf/selector-config.yml
 
 # Exclude composer installed stuff
