--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "gulp-clean": "^0.3.2",
     "gulp-clean-css": "^3.0.4",
     "gulp-concat": "^2.6.1",
-    "gulp-hash": "^4.1.1",
+    "gulp-hash-filename": "^1.2.0",
     "gulp-less": "^3.3.0",
     "gulp-rename": "^1.2.2",
     "gulp-uglify": "^2.1.2",
