--- a/composer.json
+++ b/composer.json
@@ -7,14 +7,14 @@
     ],
 
     "require": {
-        "robmorgan/phinx": "*",
-        "smarty/smarty": "3.1.21",
-        "adodb/adodb-php": "@dev",
-        "riimu/kit-csrf": "2.*",
-        "symfony/http-foundation": "^3.1",
-        "symfony/yaml": "^3.1",
+        "robmorgan/phinx": "^0.9.2",
+        "smarty/smarty": "^3.1",
+        "riimu/kit-csrf": "^2.4",
+        "symfony/http-foundation": "^3.4",
+        "symfony/yaml": "^3.4",
         "ircmaxell/random-lib": "^1.2",
-        "sentry/sentry": "^1.6"
+        "sentry/sentry": "^1.8",
+        "adodb/adodb-php": "@dev"
     },
 
     "autoload": {
@@ -26,3 +26,4 @@
         }
     }
 }
+
