--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,9 @@
     },
 
     "autoload": {
+        "classmap": [
+            "plugins/jobqueue/"
+        ],
         "files" : [
             "vendor/adodb/adodb-php/adodb-xmlschema03.inc.php"
         ],
