--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "symfony/http-foundation": "^3.1",
         "symfony/yaml": "^3.1",
         "ircmaxell/random-lib": "^1.2",
-        "sentry/sentry": "^1.9.1"
+        "sentry/sentry": "^1.9.1",
+	"phpmailer/phpmailer": "~6.0"
     },
 
     "autoload": {
