Fix composer files

--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "symfony/yaml": "^3.4",
         "ircmaxell/random-lib": "^1.2",
         "sentry/sentry": "^1.9.1",
-	"phpmailer/phpmailer": "~6.0"
+	"phpmailer/phpmailer": "~6.0",
         "adodb/adodb-php": "@dev"
     },
 
