--- a/composer.json
+++ b/composer.json
@@ -1,11 +1,4 @@
 {
-    "repositories": [
-        {
-            "type": "vcs",
-            "url": "https://github.com/uzerpllp/adodb.git"
-        }
-    ],
-
     "require": {
         "robmorgan/phinx": "^0.9.2",
         "smarty/smarty": "^3.1",
@@ -16,7 +9,7 @@
         "sentry/sentry": "^1.9.1",
         "phpmailer/phpmailer": "~6.0",
         "league/oauth2-client": "^2.4",
-        "adodb/adodb-php": "@dev"
+        "adodb/adodb-php": "^5.20"
     },
 
     "autoload": {
@@ -28,4 +21,3 @@
         }
     }
 }
-
