--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "sentry/sentry": "^1.9.1",
         "phpmailer/phpmailer": "~6.0",
         "league/oauth2-client": "^2.4",
-        "adodb/adodb-php": "^5.20"
+        "adodb/adodb-php": "^5.20",
+        "monolog/monolog": "^2.0"
     },
 
     "autoload": {
