--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "gulp-hash-filename": "^3.0.0",
     "gulp-less": "^4.0.1",
     "gulp-rename": "^1.2.2",
+    "gulp-terser": "^1.4.0",
     "gulp-uglify": "^2.1.2",
+    "gulp-uglify-es": "^2.0.0",
     "gulp-wrap": "^0.14.0",
     "merge-stream": "^1.0.1"
   },
