--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -12,5 +12,6 @@ jobs:
       - uses: actions/setup-node@v1
       - run: npm install
       - run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - run: sudo chmod a+x ./utils/uzerp-make-release
       - run: ./utils/uzerp-make-release -r $RELEASE_VERSION -w /tmp
       - run: ls /tmp
