--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -5,16 +5,42 @@ on:
     tags:
       - '*'
 jobs:
-  build-resources:
+  build:
     runs-on: ubuntu-18.04
     steps:
-      - uses: actions/checkout@v2
-      - uses: actions/setup-node@v1
-      - uses: shivammathur/setup-php@v2
+      - name: Checkout code
+        uses: actions/checkout@v2
+      - name: Install nodejs
+        uses: actions/setup-node@v1
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
         with:
           php-version: '7.4'
-      - run: npm install
-      - run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
-      - run: sudo chmod a+x ./utils/uzerp-make-release
-      - run: ./utils/uzerp-make-release -r $RELEASE_VERSION -w /tmp
-      - run: ls /tmp
+      - name: Install node packages
+        run: npm install
+      - name: Set release version as tag
+        run: echo "RELEASE_VERSION=${GITHUB_REF#refs/*/}" >> $GITHUB_ENV
+      - name: Make build script executable
+        run: sudo chmod a+x ./utils/uzerp-make-release
+      - name: Build release
+        run: ./utils/uzerp-make-release -r $RELEASE_VERSION -w /tmp
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          tag_name: ${{ github.ref }}
+          release_name: uzERP ${{ github.ref }}
+          draft: true
+          prerelease: true
+      - name: Upload Release Asset
+        id: upload-release-asset 
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
+          asset_path: /tmp/release-uzerp-${RELEASE_VERSION}.tar.gz
+          asset_name: release-uzerp-${RELEASE_VERSION}.tar.gz
+          asset_content_type: application/tar+gzip
