--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -30,8 +30,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
-          tag_name: ${{ RELEASE_VERSION }}
-          release_name: uzERP ${{ RELEASE_VERSION }}
+          tag_name: $RELEASE_VERSION
+          release_name: uzERP $RELEASE_VERSION
           draft: true
           prerelease: true
       - name: Upload Release Asset
@@ -41,6 +41,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: /tmp/release-uzerp-${{RELEASE_VERSION}}.tar.gz
-          asset_name: release-uzerp-${{RELEASE_VERSION}}.tar.gz
+          asset_path: /tmp/release-uzerp-$RELEASE_VERSION.tar.gz
+          asset_name: release-uzerp-$RELEASE_VERSION.tar.gz
           asset_content_type: application/tar+gzip
