Github Action, generate md5

--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -24,6 +24,9 @@ jobs:
         run: sudo chmod a+x ./utils/uzerp-make-release
       - name: Build release
         run: ./utils/uzerp-make-release -r $RELEASE_VERSION -w /tmp
+      - name: Generate md5 hash
+        run: |
+          echo ::set-env name=RELEASE_HASH::$(md5sum "/tmp/release-uzerp-${{ env.RELEASE_VERSION }}.tar.gz")
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
