--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Build release
         run: ./utils/uzerp-make-release -r $RELEASE_VERSION -w /tmp
       - name: Generate md5 hash
-        run: echo 'RELEASE_HASH=$(md5sum "/tmp/release-uzerp-${{ env.RELEASE_VERSION }}.tar.gz")' >> $GITHUB_ENV
+        run: echo "RELEASE_HASH=$(md5sum /tmp/release-uzerp-${{ env.RELEASE_VERSION }}.tar.gz)" >> $GITHUB_ENV
       - name: Create Release
         id: create_release
         uses: actions/create-release@v1
