--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "league/oauth2-client": "^2.4",
         "adodb/adodb-php": "^5.20",
         "monolog/monolog": "^2.0",
-        "ramsey/uuid": "^4.1"
+        "ramsey/uuid": "^4.1",
+        "vlucas/phpdotenv": "^5.4"
     },
 
     "autoload": {
