--- a/composer.json
+++ b/composer.json
@@ -22,5 +22,10 @@
         "psr-4": {
             "UzerpPhinx\\": "schema/phinx/classes/"
         }
+    },
+    "config": {
+        "platform": {
+            "php": "7.2.24"
+        }
     }
 }
