--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,15 @@
     },
     "config": {
         "platform": {
-            "php": "7.2.24"
+            "php": "7.3"
+        },
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
         }
+    },
+    "require-dev": {
+        "rector/rector": "^0.15.16",
+        "symplify/easy-coding-standard": "^11.2",
+        "pestphp/pest": "^1.22"
     }
 }
