Raise memeory limit for PHPStan

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,6 +4,6 @@ repos:
   hooks:
     - id: phpstan
       name: Check PHP coding standards
-      entry: podman exec -it uzerp-app-dev vendor/bin/phpstan analyse --autoload-file utils/dev/loader.php
+      entry: podman exec -it uzerp-app-dev vendor/bin/phpstan analyse --autoload-file utils/dev/loader.php --memory-limit 512M
       language: system
       types: [php]
