--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -28,25 +28,16 @@ jobs:
         run: echo "RELEASE_HASH=$(md5sum /tmp/release-uzerp-${{ env.RELEASE_VERSION }}.tar.gz | awk '{ print $1 }')" >> $GITHUB_ENV
       - name: Create Release
         id: create_release
-        uses: actions/create-release@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        uses: softprops/action-gh-release@v1
         with:
+          token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ env.RELEASE_VERSION }}
-          release_name: "uzERP ${{ env.RELEASE_VERSION}}"
-          body: |
+          name: "uzERP ${{ env.RELEASE_VERSION}}"
+          append_body: |
             See https://github.com/uzerpllp/uzerp/blob/${{ env.RELEASE_VERSION}}/CHANGELOG.md for notable changes since the last uzERP release.
             
             md5: ${{ env.RELEASE_HASH}}
           draft: false
           prerelease: true
-      - name: Upload Release Asset
-        id: upload-release-asset 
-        uses: actions/upload-release-asset@v1
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-          asset_path: "/tmp/release-uzerp-${{ env.RELEASE_VERSION }}.tar.gz"
-          asset_name: "release-uzerp-${{ env.RELEASE_VERSION }}.tar.gz"
-          asset_content_type: application/tar+gzip
+          files: "/tmp/release-uzerp-${{ env.RELEASE_VERSION }}.tar.gz"
+
