--- a/.github/workflows/build-release.yml
+++ b/.github/workflows/build-release.yml
@@ -33,7 +33,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           tag_name: ${{ env.RELEASE_VERSION }}
           name: "uzERP ${{ env.RELEASE_VERSION}}"
-          append_body: |
+          body: |
             See https://github.com/uzerpllp/uzerp/blob/${{ env.RELEASE_VERSION}}/CHANGELOG.md for notable changes since the last uzERP release.
             
             md5: ${{ env.RELEASE_HASH}}
