--- a/package.json
+++ b/package.json
@@ -3,12 +3,12 @@
   "version": "1.0.0",
   "private": true,
   "devDependencies": {
-    "gulp": "4.0",
+    "gulp": "^4.0.2",
     "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-hash-filename": "^3.0.0",
-    "gulp-less": "^4.0.1",
+    "gulp-less": "^5.0.0",
     "gulp-rename": "^1.2.2",
     "gulp-terser": "^1.4.0",
     "gulp-uglify": "^2.1.2",
@@ -18,5 +18,8 @@
   },
   "scripts": {
     "gulp": "gulp"
+  },
+  "dependencies": {
+    "npm": "^10.4.0"
   }
 }
