fix(autoload): composer load adodb-xmlschema03.inc.php
DB::extractSchema() uses adoSchema, provided by the above.

--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
         ],
         "psr-4": {
             "UzerpPhinx\\": "schema/phinx/classes/"
-        }
+        },
+        "files" : [
+            "vendor/adodb/adodb-php/adodb-xmlschema03.inc.php"
+        ]
     },
     "config": {
         "platform": {
