chore: update container name for dev

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -4,7 +4,7 @@ repos:
   hooks:
     - id: phpstan
       name: Check PHP coding standards
-      entry: podman exec -it uzerp-app-dev vendor/bin/phpstan analyse --autoload-file utils/dev/loader.php --memory-limit 512M
+      entry: podman exec -it uzerp83-app-dev vendor/bin/phpstan analyse --autoload-file utils/dev/loader.php --memory-limit 512M
       language: system
       types: [php]
     - id: smartydebug
